--- a/SmartEatDemo/app/src/main/res/layout/entrance_frame.xml
+++ b/SmartEatDemo/app/src/main/res/layout/entrance_frame.xml
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/entrance_text"
-            android:textColor="#313131"
+            android:textColor="@color/dark_text"
             android:textColorLink="#DD5235"
             android:textSize="34sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -83,7 +83,7 @@
                 android:focusable="true"
                 android:hint="@string/login_field"
                 android:inputType="text"
-                android:textColor="#383738" />
+                android:textColor="@color/dark_text" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -108,7 +108,7 @@
                 android:hint="@string/password_field"
 
                 android:inputType="textPassword"
-                android:textColor="#373737"
+                android:textColor="@color/dark_text"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -124,7 +124,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#EEF5E6"
             android:text="@string/button_enter"
-            android:textColor="#313131"
+            android:textColor="@color/dark_text"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -137,7 +137,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/no_account"
-            android:textColor="#393738"
+            android:textColor="@color/dark_text"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -151,6 +151,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/password_forgot"
+            android:textColor="@color/dark_text"
             app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.125"
@@ -165,7 +166,7 @@
             android:background="?attr/selectableItemBackground"
             android:onClick="toRegistration"
             android:text="@string/registration_u_text"
-            android:textColor="#393738"
+            android:textColor="@color/dark_text"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
