--- a/SmartEatDemo/app/src/main/res/values/colors.xml
+++ b/SmartEatDemo/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark_text">#313131</color>
+    <color name="main">#8BC34A</color>
 </resources>
