--- a/SmartEatDemo/app/src/main/res/values/themes.xml
+++ b/SmartEatDemo/app/src/main/res/values/themes.xml
@@ -2,11 +2,14 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.SmartEatDemo" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimary">@color/main</item>
+
 <!--        <item name="shapeAppearanceOverlay">@style/ShapeAppearance.App.CornerSize</item>-->
     </style>
 
-    <style name="Theme.SmartEatDemo" parent="Base.Theme.SmartEatDemo" />
+    <style name="Theme.SmartEatDemo" parent="Base.Theme.SmartEatDemo" >
+<!--        <item name="colorPrimaryVariant">@color/black</item>-->
+    </style>
 
 <!--    <style name="ShapeAppearance.App.CornerSize">-->
 <!--        <item name="cornerFamily">rounded</item>-->
