--- a/SmartEatDemo/app/src/main/res/layout/entrance_frame.xml
+++ b/SmartEatDemo/app/src/main/res/layout/entrance_frame.xml
@@ -10,17 +10,18 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="360dp"
-        android:layout_height="320dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="273dp"
         android:background="@drawable/rounded_constraint_layout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.45"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintVertical_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo2">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.88">
 
         <!--  app:shapeAppearanceOverlay="@theme/ShapeAppearance.App.CornerSize">-->
         <!--        android:background="@drawable/rounded_login_ui"-->
@@ -39,80 +40,96 @@
         <!--            app:layout_constraintTop_toBottomOf="@+id/textView2"-->
         <!--            app:layout_constraintVertical_bias="0.407" />-->
 
-        <LinearLayout
+        <TableLayout
             android:id="@+id/linerLayotToRegistration"
-            android:layout_width="215dp"
-            android:layout_height="25dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.072"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_bias="0.965"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/buttonEnter"
-            app:layout_constraintVertical_bias="0.768">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.7">
 
-            <TextView
-                android:id="@+id/textViewNoAccount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="0dp"
-                android:text="@string/no_account"
-                android:textColor="@color/dark_text"
-                android:textSize="16sp" />
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/textViewEntranceToRegistration"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginEnd="0dp"
-                android:layout_marginBottom="0dp"
-                android:background="?attr/selectableItemBackground"
-                android:onClick="toRegistration"
-                android:text="@string/registration_u_text"
-                android:textColor="@color/dark_text"
-                android:textSize="16sp"
-                tools:ignore="TouchTargetSizeCheck" />
+                <TextView
+                    android:id="@+id/textViewNoAccount"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_marginBottom="0dp"
+                    android:text="@string/no_account"
+                    android:textColor="@color/dark_text"
+                    android:textSize="16sp" />
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/textViewEntranceToRegistration"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="start"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:background="?attr/selectableItemBackground"
+                    android:onClick="toRegistration"
+                    android:text="@string/registration_u_text"
+                    android:textColor="@color/dark_text"
+                    android:textSize="16sp"
+                    tools:ignore="TouchTargetSizeCheck" />
+            </TableRow>
+        </TableLayout>
 
         <TextView
             android:id="@+id/textViewEntrance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:gravity="center"
             android:text="@string/entrance_text"
             android:textColor="@color/dark_text"
             android:textColorLink="#DD5235"
             android:textSize="34sp"
-            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutLogin"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintHeight_percent="0.145"
+            app:layout_constraintVertical_bias="0.03"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.25" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayoutLogin"
-            android:layout_width="295dp"
-            android:layout_height="55dp"
-            android:layout_marginBottom="20dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
 
             android:background="?attr/selectableItemBackground"
             app:hintEnabled="true"
-            app:layout_constraintBottom_toTopOf="@+id/textViewForgotPassword"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.507"
+            app:layout_constraintVertical_bias="0.25"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHeight_percent="0.20"
+            app:layout_constraintWidth_percent="0.82"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewEntrance">
+            app:layout_constraintTop_toTopOf="parent">
 
             <EditText
                 android:id="@+id/editTextText"
-                android:layout_width="295dp"
-                android:layout_height="48dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
                 android:ems="10"
                 android:focusable="true"
                 android:hint="@string/login_field"
@@ -122,19 +139,23 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayoutPassword"
-            android:layout_width="295dp"
-            android:layout_height="55dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:hintEnabled="true"
-            app:layout_constraintBottom_toTopOf="@+id/buttonEnter"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintVertical_bias="0.615"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHeight_percent="0.20"
+            app:layout_constraintWidth_percent="0.82"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword"
+            app:layout_constraintTop_toTopOf="parent"
             app:passwordToggleEnabled="true">
 
             <EditText
                 android:id="@+id/editTextTextPassword"
-                android:layout_width="295dp"
-                android:layout_height="48dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="@string/password_field"
 
@@ -151,31 +172,35 @@
 
         <Button
             android:id="@+id/buttonEnter"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:backgroundTint="#EEF5E6"
             android:text="@string/button_enter"
             android:textColor="@color/dark_text"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/linerLayotToRegistration"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.15"
+            app:layout_constraintVertical_bias="0.845"
+            app:layout_constraintHorizontal_bias="0.51"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.5" />
 
         <TextView
             android:id="@+id/textViewForgotPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:text="@string/password_forgot"
             android:textColor="@color/dark_text"
-            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPassword"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.136"
+            app:layout_constraintHeight_percent="0.07"
+            app:layout_constraintVertical_bias="0.47"
+            app:layout_constraintHorizontal_bias="0.51"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLogin" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.82"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -183,15 +208,16 @@
         android:id="@+id/logo2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="130dp"
-        android:layout_marginBottom="66dp"
+
         android:contentDescription="@string/logo_description"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.16"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintVertical_bias="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.35"
         app:srcCompat="@drawable/logo2" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -199,7 +225,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.15" />
+        app:layout_constraintGuide_percent="0.14994232" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline6"
