--- a/SmartEatDemo/app/src/main/res/layout/entrance_frame.xml
+++ b/SmartEatDemo/app/src/main/res/layout/entrance_frame.xml
@@ -126,7 +126,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <EditText
-                android:id="@+id/entranceEditTextLogin"
+                android:id="@+id/editTextLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
@@ -153,7 +153,7 @@
             app:passwordToggleEnabled="true">
 
             <EditText
-                android:id="@+id/entranceEditTextPassword"
+                android:id="@+id/editTextPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
