--- a/SmartEatDemo/app/src/main/res/values/colors.xml
+++ b/SmartEatDemo/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="dark_text">#313131</color>
     <color name="main">#8BC34A</color>
+    <color name="red">#FF0000</color>
 </resources>
